infra/k8s/kanidm/destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kanidm
  namespace: kanidm
spec:
  host: kanidm.kanidm.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
